# bt_core

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  Makefile  README.md  build_ext.py  deploy.sh  init.sh  pyproject.toml  setup.py  simon-baz-wally-west-daredevil.md
backtest/: __init__.py  _version.py  analyzer.py  broker.py  calendar.py  cerebro.py  common.py  control.py  dataseries.py  errors.py  feed.py  functions.py  grid.py  indicator.py  linebuffer.py  lineiterator.py  lineroot.py  lineseries.py  log.py  metabase.py  notify.py  observer.py  operator.py  operators.py  pnc.cpp  pnc.pxd  pnc.pyx  resamplefilter.py  resamplerfilter.py  restricted.py  risk.py  sentinel.py  shm.cpp  shm.pxd  shm.pyx  signal.py  sink.cpp  sink.pyx  sizer.cpp  sizer.pxd  (+12 more)
backtest/analyzers/: __init__.py  alpha.py  analyzers.py  annualreturn.py  basic.py  benchmark.py  broker.py  calmar.py  drawdown.py  estimate.py  leverage.py  logreturnsrolling.py  orders.py  periodstats.py  positions.py  pyfolio.py  returns.py  sharpe.py  sqn.py  timereturn.py  tradeanalyzer.py  transactions.py  vwr.py
backtest/brokers/: __init__.py  btbroker.py  raybroker.py
backtest/contrib/: cache.pyx  filler copy.pyx  finetune.py  panelfeed.py  protocol.py  ray_agent.py  rayfeed.py  strategy.py  test.py  util.pyx
backtest/control/: pnc.cpp  pnc.pxd  pnc.pyx
backtest/core/: control.py  eventEngine.py  execution.py  indicator.py  lineseries.py  strategy.py  tradesimulation.py
backtest/execution/: trade_api.cpp  trade_api.pxd  trade_api.pyx
backtest/extension/: smtp.py
backtest/feeds/: __init__.py  arrowfeed.py  bcolz.py  blaze.py  btdata.py  exp.py  generic.py  hdf5.py  ibdata.py  influxfeed.py  local.py  mdapi.py  pandafeed.py  parquetfeed.py  pqtfeed.py  quotefeed.py  raydata.py  rayfeed.py  remote.py  rpcfeed.py  s3feed.py  xtpfeed.py
backtest/filters/: bsplitter.py  calendardays.py  datafiller.py  datafilter.py  daysteps.py  heikinashi.py  renko.py  session.py
backtest/gateway/: gateway.py
backtest/indicators/: __init__.py  accdecoscillator.py  aroon.py  atr.py  awesomeoscillator.py  basicops.py  bollinger.py  cci.py  crossover.py  dema.py  deviation.py  directionalmove.py  dma.py  dpo.py  dv2.py  ema.py  envelope.py  hadelta.py  heikinashi.py  hma.py  hurst.py  ichimoku.py  kama.py  kst.py  lrsi.py  mabase.py  macd.py  momentum.py  ols.py  oscillator.py  percentchange.py  percentrank.py  pivotpoint.py  prettygoodoscillator.py  priceoscillator.py  psar.py  rmi.py  rsi.py  sma.py  smma.py  (+12 more)
backtest/logger/: manager.py  sink.cpp  sink.pxd  sink.pyx
backtest/meta/: linebuffer.py  lineiterator.py  signal.py  sizer.py  timer.py
bt_core/: __init__.py  _constant.py  _external.py  _protocol.py  analyzer.py  broker.py  cerebro.py  dataseries.py  errors.py  feed.py  flt.py  linebuffer.py  lineiterator.py  lineseries.py  log.py  logic.py  metabase.py  optimizer.py  resamplerfilter.py  signal.py  sizer.py  store.py  strategy.py  timer.cpp  timer.pxd  timer.pyx  tradingcal.py
contrib/: analyzer.py  cal.py  cas.py  leverage.py  lineiterator.py  logreturnsrolling.py  mod.py  observer.py  positions.py  protocol.py  pyfolio.py  raystore.py  restriction.py  risk.py  run_server.py  server.py  simulate.pyx  strategy.py  test.py  timer.pyx  tradingcal.py  util.pxd  writer.py  writer_actor.pyx  xtpfeed.py
engine/: __init__.py  adjust.py  control.py  domain.py  engine.py  estimate.py  eventEngine.py  filter.py  graph.py  mgr.py  pipeline.py  similarity.py  sizer.py  term.py  ump.py
feeds/: chainer.py  rollover.py
indicators/: accdecoscillator.py
meta/: dataseries.py  lineroot.py  op.py  resamplefilter.py  strategy.py  tradingcal.py
scripts/: deploy.sh
tests/: log_cerebro_0.jsonl  log_log_test_0.parquet  out.csv  out_1.csv  plot.html  plot.py  test.py  test_bkh.py  test_cerebro.html  test_cerebro.py  test_feed.py  test_feed_resample.py  test_func.py  test_mdapi.py  test_meta.py  test_plot.html  test_plot.py  test_resample.py  test_signal.py  test_stack_plot.py  test_store.py  test_strategy.py  test_tdapi.py  transactions.py  util.py
utils/: autodict.py
workflow/: astc.py  common.py  dispatcher.py  finetune.py  fsm.py  function.py  metric.json  preprocess.py  ray_agent.py  run_cluster.py  run_ray.py  run_sim.py  run_simulation.py  util.py  wfo.py
(+466 files in other folders)
