[tool.poetry]
name = "bt-backtest"
version = "0.1.0"
description = "backtest"
authors = ["hengxin.liu <13776668123@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyarrow = "^19.0.1"
ipython = "7.31.1"
colorama = "^0.4.6"
pyqt6 = "^6.9.0"
bt-sdk = "0.5.1"
statsmodels = "^0.14.4"
exceptiongroup = "^1.3.0"
pydantic = "2.6"
idna = "^3.10"
certifi = "^2025.6.15"
scipy = "^1.16.1"
patsy = "^1.0.1"
httpx = "^0.28.1"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
# optional: make this your default source for all installs
priority = "default"

[[tool.poetry.source]]
name = "devpi"
url = "http://localhost:3141/bt_sdk/dev/+simple/"
# optional: make this your default source for all installs
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
