[tool.poetry]
name = "bt-backtest"
version = "0.1.0"
description = "backtest"
authors = ["hengxin.liu <13776668123@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyarrow = "^19.0.1"
ipython = "7.31.1"
colorama = "^0.4.6"
pyqt6 = "^6.9.0"
bt-sdk = "0.8.4"
statsmodels = "^0.14.4"
exceptiongroup = "^1.3.0"
idna = "^3.10"
certifi = "^2025.6.15"
scipy = "^1.16.1"
patsy = "^1.0.1"
httpx = "^0.28.1"
matplotlib = "^3.10.5"
pydantic = "2.6.4"
pydantic-core = "2.16.3"
dotenv = "^0.9.9"
twine = "^6.2.0"
ray = {extras = ["default"], version = "^2.51.1"}
bokeh = "^3.8.1"
reportlib = "^3.4.0"
selenium = "^4.38.0"
chromedriver = "^2.24.1"
chromium = "^0.0.0"
geckodriver = "^0.0.1"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
# optional: make this your default source for all installs
priority = "default"

[[tool.poetry.source]]
name = "devpi"
url = "http://192.168.2.100:3141/bt_sdk/dev/+simple/"
# optional: make this your default source for all installs
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
