[tool.poetry]
name = "bt_core"
version = "0.2.2"
description = "remove .cpp and .so"
authors = ["hengxin.liu <13776668123@163.com>"]
readme = "README.md"
build = "build_ext.py"

include = [
    { path = "bt_core/**/*.so", format = "wheel" },
    { path = "bt_core/**/*.dylib", format = "wheel" },
    { path = "bt_core/**/*.pyd", format = "wheel" },
    { path = "bt_core/**/*.pyx" }
]

[tool.poetry.dependencies]
python = "^3.11"
ipython = "7.31.1"
colorama = "^0.4.6"
exceptiongroup = "^1.3.0"
idna = "^3.10"
certifi = "^2025.6.15"
scipy = "^1.16.1"
patsy = "^1.0.1"
httpx = "^0.28.1"
matplotlib = "^3.10.5"
pydantic-core = "2.16.3"
dotenv = "^0.9.9"
twine = "^6.2.0"
bokeh = "^3.8.1"
memray = "^1.19.1"
py-spy = "^0.4.1"
reactivex = "^4.1.0"
cython = ">=3.0"
pyarrow = "^22.0.0"
ib = "^0.8.0"
line-profiler = "^5.0.0"
snakeviz = "^2.2.2"
cloudpickle = "^3.1.2"
joblib = "^1.5.3"
pytz = "^2025.2"
numba = "^0.64.0"
sqlalchemy = "^2.0.47"
asyncpg = "^0.31.0"
greenlet = "^3.3.2"
fsspec = "^2026.2.0"
ta-lib = "^0.6.8"
polar = "^0.0.127"
polars = "^1.39.0"
sphinx = "<9.0"
sphinx-rtd-theme = "^3.1.0"
grpcio = "^1.78.0"
bt-sdk = "0.12.1"
protobuf = "^7.34.1"
build = "^1.5.0"
poetry-core = "^2.4.0"
wheel = "^0.47.0"
pybind11 = "^3.0.4"
cmake = "^4.3.2"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
# optional: make this your default source for all installs
priority = "primary"

[[tool.poetry.source]]
name = "devpi"
# url = "http://192.168.2.100:3141/bt_sdk/dev/+simple/"
url = "http://localhost:3141/bt_sdk/dev/+simple/"
# optional: make this your default source for all installs
priority = "supplemental"

# [tool.setuptools]
# include-package-data = true # __init__.py 

# [tool.setuptools.packages.find]
# where = ["."]
# include = ["bt_core*"]
# exclude = ["tests*", "docs*", "benchmarks*"]

# [tool.setuptools.package-data]
# "*" = ["*.pyx", "*.pxd", "*.so", "*.pyd", "*.h", "*.cpp", "*.proto", "*.pyi*"]

[build-system]
requires = ["poetry-core", "wheel", "pybind11", "cmake", "Cython>=3.0", "numpy", "setuptools"]
# build-backend =  "setuptools.build_meta" 
build-backend = "poetry.core.masonry.api" # scikit-build-core for cmake
